# bigprimes.net

./: .gitignore  .travis.yml  Cargo.toml  README.md  Trunk.toml  aws-cloudformation.yaml  cloudflare-build.sh  index.html
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml
assets/: c.css
src/: lib.rs  route.rs  timestamp.rs  utils.rs
src/pages/: contact.rs  cruncher.rs  downloads.rs  error.rs  faq.rs  home.rs  mod.rs  primalitytest.rs  status.rs
src/pages/archive/: fermat.rs  fibonacci.rs  index.rs  mersenne.rs  mod.rs  perfect.rs  prime.rs
www/: ads.txt  c.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
