[package]
name = "big_primes"
version = "0.1.0"
authors = ["Craig Mayhew"]
edition = "2018" #rust has two major editions, 2018 is the latest

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
seed = { git = "https://github.com/David-OConnor/seed" } # we need version 0.4, which isn't release as of 21-07-2019
serde = "^1.0.92"
serde_json = "1.0.39"
wasm-bindgen = "0.2"

tool = "0.2.1"
indexmap = { version = "1.0.2", features = [ "serde-1" ] }
futures = "^0.1.27"
unicode-segmentation = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
num-integer = "0.1.41"
web-sys = { version = "0.3.25", features = [ "ScrollBehavior", "ScrollToOptions" ] }

num-bigint = "0.2"
num-traits = "0.2"
regex = "1"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
